ingress/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web-ingress
spec:
  ingressClassName: nginx  # Заменили старую аннотацию на этот параметр
  rules:
  - host: my-k8s-site.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-service # Твое имя сервиса
            port:
              number: 80
